Update header title for score tracker

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <div class="container">
         <div class="header">
             <h1>🎤 Adiaha's Score Tracker 🎤</h1>
-            <h2>Junior Calypso Monarch Practice</h2>
+            <h2>Junior Calypso Monarch Score Forecaster</h2>
         </div>
 
         <div class="content">
